reading_recipe_name_from_mongo_added

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,15 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>HOTEL MANAGEMENT SYSTEM</h1>
+    <%-include("navbar")%>
     <div class="out">
-        <h1>recipes data</h1>
-        <h2>current recipes</h2>
-        <ol>
-            <li>
-            
-            </li>
-        </ol>
-        <h2>add new recipes</h2>
+    
+        <h2>Add New Recipes</h2>
         <%-include("form")%>
     </div>
 </body>
