--- a/views/form.ejs
+++ b/views/form.ejs
@@ -15,7 +15,7 @@
             <input type="text" name="title"  id="title"><br>
             
             <label for="discription">DESCRIPTION</label>
-            <input type="password" name="discription" id="discription"><br>
+            <input type="text" name="discription" id="discription"><br>
 
             <input type="file" name="file" placeholder="pic"><br>
 
