--- a/views/display.ejs
+++ b/views/display.ejs
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>DISPLAY RECIPE DATA</h1>
+    <ul>
+        <li>
+            <% for(let i=0;i<data.length;i++){ %>
+                <li><%=data[i]%></li>
+            <% } %> 
+        </li>
+    </ul>
 </body>
 </html>
